fix: [CDS-86737]: Fix Overlapping od Input Set dropdowns (#19527)

--- a/src/modules/70-pipeline/components/PipelineSteps/Steps/CustomVariables/MultiSelectVariableAllowedValues/MultiSelectVariableAllowedValues.module.scss
+++ b/src/modules/70-pipeline/components/PipelineSteps/Steps/CustomVariables/MultiSelectVariableAllowedValues/MultiSelectVariableAllowedValues.module.scss
@@ -9,4 +9,11 @@
   display: grid;
   grid-template-columns: 1fr 42px;
   align-items: normal !important;
+  > div {
+    overflow: auto;
+  }
+}
+
+.portalPopover {
+  max-width: 600px;
 }
